--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-# Build artifacts
-dist/
-unpackage/
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Dependencies
-node_modules/
-.npm/
-.pnpm-store/
-yarn.lock
-package-lock.json
-
-# IDE / tooling
-.idea/
-.vscode/
+node_modules
+.DS_Store
+dist
 *.local
 
-# HBuilderX / CLI caches
-.hbuilderx/
-.uniapp_cache/
-.temp/
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
