Added .env.local.example with the sensitive VITE_API_BASE placeholder and documented how to copy/fill it alongside manifest.json in README.md (zenbook-weapp/.env.local.example (line 1), zenbook-weapp/README.md (line 15)). Ensured real environment configs stay local by extending .gitignore to ignore .env* while still tracking the example templates (zenbook-weapp/.gitignore (line 33)).

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ dist
 *.sw?
 
 manifest.json
+
+# Environment configs (copy *.example, keep real files local)
+.env
+.env.*
+!.env.example
+!.env.*.example
