Updated the user store to better align with the backend’s real WeChat exchange flow: login now always obtains a fresh code, gracefully falls back to a deterministic mock code when uni.login is unavailable (and caches/env-configures it so repeated logins hit the same openid), and automatically retries once when the backend reports an “invalid code” style error before surfacing a toast (zenbook-weapp/store/user.js (lines 5-145)). Surfaced backend error details (including FastAPI’s detail payload) so login failures such as “WeChat code is invalid or expired” appear in the UI instead of the generic message, reducing guesswork during debugging (zenbook-weapp/api/request.js (lines 1-62)). Documented the new VITE_DEV_LOGIN_CODE option in the sample env file, frontend README, and docs/FRONTEND.md so developers know how to configure a stable mock login during non-WeChat debugging (zenbook-weapp/.env.local.example (lines 1-4), zenbook-weapp/README.md (lines 31-65), docs/FRONTEND.md (lines 90-109)).

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,4 @@
 # Copy this file to `.env.local` and adjust per environment
 VITE_API_BASE=https://api.example.com
+# Optional: preset a deterministic login code for local mock WeChat service
+# VITE_DEV_LOGIN_CODE=wx-dev-customer
