--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,5 @@
 VITE_API_BASE=https://api.example.com
 # Optional: preset a deterministic login code for local mock WeChat service
 # VITE_DEV_LOGIN_CODE=wx-dev-customer
+# Override clinic branding shown in the app; defaults to "ZenBook" when unset
+# VITE_CLINIC_NAME=花溪中医馆
